sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: value ! is not a member of Boolean
    while(i-j>=0! && !plusPetitQue(i-j,tampon)){
                ^AlgInsertionSort:7: error: not found: value &&
    while(i-j>=0! && !plusPetitQue(i-j,tampon)){
                  ^